--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img{width: 600px;margin-left: 50px;border-radius: 10px;}
     padding: 10px;
 }
 input {
-    padding: 20px;
+    padding: 17px;
     margin-top: 23px;
     border: none;
     border-radius: 25px;
@@ -30,14 +30,16 @@ input:focus{outline:none;}
     margin: auto;
 }
 .btn input {
-    width: 200px;
+    width: 185px;
     background: #b620d6;
     color: white;
     font-size: 19px;
     font-family: arial;
-    padding: 10px;
+    padding: 8px;
     border: 2px solid #b620d6;
     transition: 0.25s linear;
+    letter-spacing: 2px;
+    margin-left: 30px;
 }
 .btn.divAll {
     width: 200px;
@@ -80,20 +82,31 @@ a.f_pwd {
     font-size: 28px;
     color: #353535;
 }
-
 .FormLogo p {
     font-size: 17px;
     font-family: arial;
     line-height: 30px;
 }
-
 .FormLogo {
     margin-top: 85px;
-    margin-bottom: 26px;
+    margin-bottom: 12px;
 }
-
 .btn input:hover {
     background: none;
     color: black;
     cursor: pointer;
+}
+.txt {
+    width: 300px;
+    text-align: center;
+    position: absolute;
+    left: 851px;
+    top: 246px;
+    color: white;
+    font-family: arial;
+}
+.txt h3 {
+    font-family: arial;
+    line-height: 40px;
+    font-size: 30px;
 }
